--- a/picture_book/templates/accounts/registration.html
+++ b/picture_book/templates/accounts/registration.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>お話の足跡</title>
-</head>
-<body>
-    <nav>
-        <a href="{% url accounts:regist %}">登録</a>
-    </nav>
-    <div>
-        
-    </div>
-    
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<h1>新規アカウント登録</h1>
+<form method="POST">
+    {% csrf_token %}
+    {{ user_form.as_p }}
+    <input type="submit" value="登録">
+</form>
+{% endblock %}
