--- a/picture_book/templates/base.html
+++ b/picture_book/templates/base.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        {% comment %} <a href="{% url 'picture_book_app: home' %}">登録</a> {% endcomment %}
+        <a href="{% url 'picture_book_app:home' %}">ホーム</a>
         <a href="{% url 'accounts:regist' %}">登録</a>
         <a href="{% url 'accounts:logout' %}">ログアウト</a>
     </nav>
