パスワード再設定のご案内画面に送信先のメールアドレスを表示できるように修正

--- a/picture_book/templates/accounts/password_reset_done.html
+++ b/picture_book/templates/accounts/password_reset_done.html
@@ -4,6 +4,6 @@
 <h2>＜パスワード再設定のご案内＞</h2>
 <p>以下のメールアドレスにパスワード再設定用のURLをお送りしました。</p>
 <p>メールのご確認お願いいたします。</p>
-
+{{ email }}
 <a href="{% url 'accounts:login' %}">ログイン</a>
 {% endblock %}
