templatesのconfirmのミス訂正とviews.pyでパスワード再設定完了画面作成

--- a/picture_book/templates/accounts/password_reset_confirm.html
+++ b/picture_book/templates/accounts/password_reset_confirm.html
@@ -10,7 +10,7 @@
         {{ form.password1 }}
     </div>
 
-    <div class="password_rules">
+    <div class="password-rules">
         <ul>
             {% for rule in password_rules %}
                 <li>{{ rule }}</li>
@@ -21,6 +21,6 @@
         <label for="id_password2">パスワード(再入力)：</label>
         {{ form.password2 }}
     </div>
-    <button type="submit">登録/button>
+    <button type="submit">登録</button>
 </form>
 {% endblock %}
