runserverしたときにエラーが出たので修正

--- a/picture_book/templates/accounts/password_reset_done.html
+++ b/picture_book/templates/accounts/password_reset_done.html
@@ -1,9 +1,12 @@
-{% extends "base.html" %}
-{% block content %}
-<h1>お話の足跡</h1>
-<h2>＜パスワード再設定のご案内＞</h2>
-<p>以下のメールアドレスにパスワード再設定用のURLをお送りしました。</p>
-<p>メールのご確認お願いいたします。</p>
-{{ email }}
-<a href="{% url 'accounts:login' %}">ログイン</a>
-{% endblock %}
+<div class="container">
+    {% extends "base.html" %}
+    {% block content %}
+    <h1>お話の足跡</h1>
+    <h2>＜パスワード再設定のご案内＞</h2>
+    <p>以下のメールアドレスにパスワード再設定用のURLをお送りしました。</p>
+    <p>メールのご確認お願いいたします。</p>
+    <p>{{ email }}</p>
+    <a href="{% url 'accounts:login' %}">ログイン</a>
+    {% endblock %}
+</div>
+
