パスワード再設定画面へ遷移したいので修正したが上手くいきません

--- a/picture_book/templates/accounts/password_reset_confirm.html
+++ b/picture_book/templates/accounts/password_reset_confirm.html
@@ -2,6 +2,13 @@
 {% block content %}
 <h1>お話の足跡</h1>
 <p>パスワード再設定</p>
+{% comment %} エラーメッセージ {% endcomment %}
+{% if error_message %}
+    <div class="alert alert-danger">
+        <p>{{ error_message }}</p>
+    </div>
+{% endif %}
+
 <form method="POST">
     {% csrf_token %}
 
