--- a/picture_book/templates/base.html
+++ b/picture_book/templates/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お話の足跡</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <nav>
