--- a/picture_book/templates/accounts/login.html
+++ b/picture_book/templates/accounts/login.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>お話の足跡</h1>
-<form method="POST">
-    {% csrf_token %}
-    {{ login_form.as_p }}
-    <input type="submit" value="ログイン">
-</form>
+<div class="container">
+    <h1>お話の足跡</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ login_form.as_p }}
+        <input type="submit" value="ログイン">
+    </form>
 
-<p><a href="{% url 'accounts:request_password_reset' %}">※パスワードを忘れた方はこちら</a></p>
+    <p><a href="{% url 'accounts:request_password_reset' %}">※パスワードを忘れた方はこちら</a></p>
 
 
-<h3>初めてご利用の方は</h3>
-<a href="{% url 'accounts:regist' %}"><span style="color:red">アカウント登録</span></a>
+    <h3>初めてご利用の方は</h3>
+    <a href="{% url 'accounts:regist' %}"><span style="color:red">アカウント登録</span></a>
+</div>
 {% endblock %}
