--- a/picture_book/templates/accounts/password_reset_complete.html
+++ b/picture_book/templates/accounts/password_reset_complete.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>＜パスワード再設定＞</h1>
-<p>再設定が完了しました。</p>
-<button type="submit"><a href="{% url 'accounts:login' %}">ログイン画面へ</a></button>
+<div class="container"></div>
+    <h1>＜パスワード再設定＞</h1>
+    <p>再設定が完了しました。</p>
+    <button type="submit"><a href="{% url 'accounts:login' %}">ログイン画面へ</a></button>
+</div>
 {% endblock %}
