--- a/picture_book/templates/picture_book_app/home.html
+++ b/picture_book/templates/picture_book_app/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>お話の足跡</h1>
-<p>本日の読み聞かせ一覧</p>
+<div class="container">
+    <h1>お話の足跡</h1>
+    <p>本日の読み聞かせ一覧</p>
+</div>
 {% endblock %}
