--- a/picture_book/templates/accounts/registration.html
+++ b/picture_book/templates/accounts/registration.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>新規アカウント登録</h1>
-<form method="POST">
-    {% csrf_token %}
-    {{ user_form.as_p }}
-    <input type="submit" value="登録">
-</form>
+<div class="container">
+    <h1>新規アカウント登録</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        <input type="submit" value="登録">
+    </form>
+</div>
 {% endblock %}
