--- a/picture_book/templates/accounts/request_password_reset.html
+++ b/picture_book/templates/accounts/request_password_reset.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>パスワードリセットエラー</h1>
-{% if exception_notes %}
-<p>エラー: {{ exception_notes }}</p>
-{% else %}
-<p>不明なエラーが発生しました。</p>
-{% endif %} 
+<div class="container">
+    <h1>パスワードリセットエラー</h1>
+    {% if exception_notes %}
+    <p>エラー: {{ exception_notes }}</p>
+    {% else %}
+    <p>不明なエラーが発生しました。</p>
+    {% endif %}
+</div> 
 {% endblock %}
