--- a/picture_book/templates/accounts/registration.html
+++ b/picture_book/templates/accounts/registration.html
@@ -4,7 +4,22 @@
     <h1>新規アカウント登録</h1>
     <form method="POST">
         {% csrf_token %}
-        {{ user_form.as_p }}
+        <!-- {{ user_form.as_p }}は全体を<p>タグで包んで自動生成するのでフィールドに個別の定義ができず改行コードが読み込めない
+          →forで1つずつ読み込むようにする
+        {{ user_form.as_p }} -->
+        {% for field in user_form %}
+        <p>
+            {{ field.label_tag }}<br>
+            {{ field }}<br>
+            {% if field.errors %}
+                <span style="color:red;">{{ field.errors }}</span><br>
+            {% endif %}
+            {% if field.help_text %}
+                <!-- validatators.pyでカスタムしているhelp_textの\nを<br>に変換するためにlinebreaksbrを使用 -->
+                <small style="color:gray;">{{ field.help_text|linebreaksbr }}</small>
+            {% endif %}
+        </p>
+        {% endfor %}
         <input type="submit" value="登録">
     </form>
 </div>
