家族アカウント画面のtemplates作成とviews.pyの修正

--- a/picture_book/templates/accounts/password_reset_confirm.html
+++ b/picture_book/templates/accounts/password_reset_confirm.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="container">
 <h1>お話の足跡</h1>
 <p>パスワード再設定</p>
 {% comment %} エラーメッセージ {% endcomment %}
@@ -30,4 +31,5 @@
     </div>
     <button type="submit">登録</button>
 </form>
+</div>
 {% endblock %}
