--- a/picture_book/templates/accounts/family_list.html
+++ b/picture_book/templates/accounts/family_list.html
@@ -1,37 +1,29 @@
 {% extends "base.html" %}
+
 {% block content %}
 <div class="container">
     <h1>家族一覧</h1>
     <table class="table table-bordered">
         <thead>
-          <tr>
-            <th scope="col"></th>
-            <th scope="col">名前／ニックネーム</th>
-            <th scope="col">編集</th>
-            <th scope="col">Handle</th>
-          </tr>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">名前／ニックネーム</th>
+                <th scope="col">編集</th>
+            </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
+            {% for member in members %}
+                <tr>
+                    <th scope="row">{{ forloop.counter }}</th> <!-- 行番号を表示 -->
+                    <td>{{ member.user.username }}</td> <!-- メンバーの名前 -->
+                    <td><a href="{% url 'family_edit' member.id %}">編集</a></td> <!-- 編集リンク -->
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="4">家族メンバーがいません。</td>
+                </tr>
+            {% endfor %}
         </tbody>
-      </table>
-
-
+    </table>
 </div>
 {% endblock %}
