マイページ作成

--- a/picture_book/templates/accounts/profile_update.html
+++ b/picture_book/templates/accounts/profile_update.html
@@ -9,7 +9,7 @@
         {% comment %} <a href="{% url 'accounts:password_change' %}">
             <button type="button">パスワードを変更する</button>
         </a> {% endcomment %}
-        <a href="{% url 'picture_book_app:home' %}"> {% comment %}あとでマイページへ遷移{% endcomment %}
+        <a href="{% url 'accounts:mypage' %}">
             <button type="button">キャンセル</button>
         </a>
     </form>
