--- a/picture_book/templates/base.html
+++ b/picture_book/templates/base.html
@@ -24,6 +24,9 @@
                         <a class="nav-link" href="{% url 'accounts:regist' %}">登録</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'accounts:mypage' %}">マイページ</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'accounts:logout' %}">ログアウト</a>
                     </li>
                 </ul>
