--- a/picture_book/templates/accounts/profile_update.html
+++ b/picture_book/templates/accounts/profile_update.html
@@ -6,9 +6,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="登録">
-        {% comment %} <a href="{% url 'accounts:password_change' %}">
-            <button type="button">パスワードを変更する</button>
-        </a> {% endcomment %}
+        <a href="{% url 'accounts:password_change' %}"><button type="button">パスワードを変更する</button></a>
         <a href="{% url 'accounts:mypage' %}">
             <button type="button">キャンセル</button>
         </a>
