--- a/picture_book/templates/accounts/family_list.html
+++ b/picture_book/templates/accounts/family_list.html
@@ -8,7 +8,6 @@
             <tr>
                 <th scope="col"></th>
                 <th scope="col">名前／ニックネーム</th>
-                <th scope="col">家族ID</th>
                 <th scope="col">編集</th>
             </tr>
         </thead>
@@ -17,8 +16,8 @@
                 <tr>
                     <th scope="row">{{ forloop.counter }}</th> <!-- 行番号を表示 -->
                     <td>{{ member.username }}</td> <!-- メンバーの名前 -->
-                    <td>{{ member.family_id.id }}</td>  <!-- family_id を表示 -->
-                    {% comment %} <td><a href="{% url 'family_edit' member.id %}">編集</a></td> <!-- 編集リンク --> {% endcomment %}
+                    <td><a href="{% url 'accounts:family_update' member.pk %}" style="padding: 5px 10px; background-color: #D3D3D3; color: black; text-decoration: none; border-radius: 4px;">編集</a>
+                    </td>
                 </tr>
             {% empty %}
                 <tr>
