--- a/picture_book/templates/picture_book_app/child_list.html
+++ b/picture_book/templates/picture_book_app/child_list.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block content %}
 <div class="container">
     <h1>家族一覧</h1>
@@ -8,20 +7,22 @@
             <tr>
                 <th scope="col"></th>
                 <th scope="col">名前／ニックネーム</th>
+                <th scope="col">誕生日</th>
                 <th scope="col">操作</th>
             </tr>
         </thead>
         <tbody>
-            {% for member in members %}
+            {% for child in children %}
                 <tr>
                     <th scope="row">{{ forloop.counter }}</th> <!-- 行番号を表示 -->
-                    <td>{{ member.username }}</td> <!-- メンバーの名前 -->
-                    <td><a href="{% url 'accounts:family_update' member.pk %}" style="padding: 5px 10px; background-color: #D3D3D3; color: black; text-decoration: none; border-radius: 4px;">編集</a>
+                    <td>{{ child.name }}</td>
+                    <td>{{ child.birthday }}</td>
+                    <!-- <td><a href="{% url 'accounts:family_update' member.pk %}" style="padding: 5px 10px; background-color: #D3D3D3; color: black; text-decoration: none; border-radius: 4px;">編集</a> -->
                     </td>
                 </tr>
             {% empty %}
                 <tr>
-                    <td colspan="4">家族メンバーがいません。</td>
+                    <td colspan="4">登録されている子供はいません</td>
                 </tr>
             {% endfor %}
         </tbody>
