--- a/picture_book/templates/picture_book_app/child_list.html
+++ b/picture_book/templates/picture_book_app/child_list.html
@@ -17,7 +17,7 @@
                     <th scope="row">{{ forloop.counter }}</th> <!-- 行番号を表示 -->
                     <td>{{ child.name }}</td>
                     <td>{{ child.birthday }}</td>
-                    <!-- <td><a href="{% url 'accounts:family_update' member.pk %}" style="padding: 5px 10px; background-color: #D3D3D3; color: black; text-decoration: none; border-radius: 4px;">編集</a> -->
+                    <!-- <td><a href="#" style="padding: 5px 10px; background-color: #D3D3D3; color: black; text-decoration: none; border-radius: 4px;">編集</a> -->
                     </td>
                 </tr>
             {% empty %}
@@ -27,5 +27,10 @@
             {% endfor %}
         </tbody>
     </table>
+    <div style="display: flex; justify-content: flex-end;">
+        <a href="{% url 'picture_book_app:child_create' %}">
+            <button type="button">子の追加</button>
+        </a>
+    </div>
 </div>
 {% endblock %}
