絵本の検索画面の作成

--- a/picture_book/templates/base.html
+++ b/picture_book/templates/base.html
@@ -21,7 +21,7 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'picture_book_app:home' %}">ホーム</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'accounts:regist' %}">登録</a>
+                        <a class="nav-link" href="{% url 'picture_book_app:book_create' %}">登録</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'picture_book_app:book_list' %}">本棚</a>
