--- a/picture_book/templates/picture_book_app/book_create.html
+++ b/picture_book/templates/picture_book_app/book_create.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="centered-container">
     <h1>絵本新規登録</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
