--- a/picture_book/templates/picture_book_app/book_list.html
+++ b/picture_book/templates/picture_book_app/book_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="centered-container">
     <h2>本棚（絵本一覧）</h2>
 
     <!-- 検索フォーム -->
