--- a/picture_book/templates/picture_book_app/book_update.html
+++ b/picture_book/templates/picture_book_app/book_update.html
@@ -1,6 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<style>
+    .form-group {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    .form-group label {
+        font-weight: bold;
+        width: 150px;
+    }
+
+    .form-group input, .form-group select, .form-group img {
+        flex: 1;
+        margin-left: 10px;
+    }
+
+    .form-group img {
+        max-width: 200px;
+        height: auto;
+    }
+
+    .file-input {
+        display: inline-block;
+        margin-top: 5px;
+    }
+</style>
+
+<div class="centered-container">
     <h3>絵本編集・削除</h3>
     <a href="{% url 'picture_book_app:book_list' %}" style="text-decoration: none; font-size: 1.2em; display: block; margin-top: 10px; margin-left: 0;">←戻る</a>
     <form method="POST" enctype="multipart/form-data">
@@ -15,7 +43,7 @@
         </div>
         <div style="margin-bottom: 15px;">
             <label for="{{ form.publisher.id_for_label }}" style="font-weight: bold; display: inline-block; width: 150px;">{{ form.publisher.label }}：</label>
-            {{ from.publisher }}
+            {{ form.publisher }}
         </div>
         <div style="margin-bottom: 15px;">
             <label for="{{ form.cover_image.id_for_label }}" style="font-weight: bold; display: inline-block; width: 150px;">{{ form.cover_image.label }}：</label>
@@ -29,14 +57,16 @@
             </div>
         {% endif %}
 
-        <div style="text-align: center;">
-        <input type="submit" value="保存">
+        <div style="text-align: center; display: flex; justify-content: center; gap: 10px;"">
+            <input type="submit" value="保存">
+            <form action="{% url 'picture_book_app:book_delete' book.pk %}" method="POST" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit" onclick="return confirm('本当に削除しますか？');" style="padding: 5px 15px;">削除</button>
+            </form>
+            <a href="{% url 'picture_book_app:book_list' %}">
+                <button type="button" style="padding: 10px 20px; font-size: 1rem;">キャンセル</button>
+            </a>
         </div>
-    </form>
-    <form action="{% url 'picture_book_app:book_delete' book.pk %}" method="POST" style="display:inline;">
-        {% csrf_token %}
-        <button type="submit" onclick="return confirm('本当に削除しますか？');" style="padding: 5px 15px;">削除</button>
-        <a href="{% url 'picture_book_app:book_list' %}"><button type="button">キャンセル</button></a>
     </form>
 </div>
 {% endblock %}
