--- a/picture_book/templates/picture_book_app/child_registration.html
+++ b/picture_book/templates/picture_book_app/child_registration.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="centered-container">
     <h1>子ども追加</h1>
     <a href="{% url 'picture_book_app:child_list' %}" style="text-decoration: none; font-size: 1.2em; display: block; margin-top: 10px; margin-left: 0;">←戻る</a>
     <form method="POST">
