読み聞かせ記録詳細画面作成

--- a/picture_book/templates/picture_book_app/book_update.html
+++ b/picture_book/templates/picture_book_app/book_update.html
@@ -57,7 +57,7 @@
             </div>
         {% endif %}
 
-        <div style="text-align: center; display: flex; justify-content: center; gap: 10px;"">
+        <div style="text-align: center; display: flex; justify-content: center; gap: 10px;">
             <input type="submit" value="保存">
             <form action="{% url 'picture_book_app:book_delete' book.pk %}" method="POST" style="display:inline;">
                 {% csrf_token %}
