--- a/picture_book/templates/base.html
+++ b/picture_book/templates/base.html
@@ -27,6 +27,9 @@
                         <a class="nav-link" href="{% url 'picture_book_app:book_list' %}">本棚</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'picture_book_app:reading_record_create' %}">記録</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'accounts:mypage' %}">マイページ</a>
                     </li>
                     <li class="nav-item">
