--- a/picture_book/templates/picture_book_app/reading_record_create.html
+++ b/picture_book/templates/picture_book_app/reading_record_create.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="保存">
+            <input type="submit" value="保存" style="margin-left: 80px; padding: 10px 20px;">
         </div>
     </form>
 </div>
