--- a/picture_book/templates/base.html
+++ b/picture_book/templates/base.html
@@ -26,8 +26,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'picture_book_app:book_list' %}">本棚</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
+                          記録
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="{% url 'picture_book_app:reading_record_create' %}">記録登録</a></li>
+                            <li><a class="dropdown-item" href="{% url 'picture_book_app:reading_record_list' %}">記録一覧</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'picture_book_app:reading_record_create' %}">記録</a>
+                        <a class="nav-link" href="{% url 'picture_book_app:book_ranking' %}">ランキング</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'accounts:mypage' %}">マイページ</a>
