--- a/picture_book/templates/picture_book_app/book_ranking.html
+++ b/picture_book/templates/picture_book_app/book_ranking.html
@@ -3,19 +3,18 @@
 <div class="container">
     <h1>好きな絵本ランキング</h1>
     <form method="GET">
-        <label>子ども：
-            <select name="child_id">
+        <label for="child_id" class="child-label">子ども：</label>
+            <select name="child_id" class="child-select">
                 {% for child in children %}
                     <option value="{{ child.id }}" {% if selected_child_id == child.id %}selected{% endif %}>
                         {{ child.name }}
                     </option>
                 {% endfor %}
             </select>
-        </label>
         <button type="submit">表示</button>
     </form>
 
-    <p>読み聞かせ合計：{{ total_reads }}回</p>
+    <div class="total-reads">合計： <span>{{ total_reads }}回</span></div>
 
 
 <!-- ランキング表 -->
@@ -37,6 +36,8 @@
             {% endfor %}
         </tbody>
     </table>
+    
+    
     <!-- ページネーション -->
      <div>
         {% if page_obj.has_previous %}
