--- a/picture_book/templates/accounts/invalid_invitation.html
+++ b/picture_book/templates/accounts/invalid_invitation.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <h1>無効な招待リンク</h1>
     <p>この招待リンクは無効です。期限が切れているか、すでに使用された可能性があります。</p>
     <p>別のリンクを使用するか、再度招待を依頼してください。</p>
