--- a/picture_book/templates/accounts/mypage.html
+++ b/picture_book/templates/accounts/mypage.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <h1 style="text-align: left; display: block;">マイページ</h1>
     <ul>
         <li><a href="{% url 'accounts:profile_update' %}" style="color: #555555; font-size: 1.5em;">アカウント情報変更</a></li>
