--- a/picture_book/templates/accounts/password_reset_complete.html
+++ b/picture_book/templates/accounts/password_reset_complete.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="centered-container">
     <h1>＜パスワード再設定＞</h1>
     <p>再設定が完了しました。</p>
-    <button type="submit"><a href="{% url 'accounts:login' %}">ログイン画面へ</a></button>
+    <form action="{% url 'accounts:login' %}" method="get">
+        <input type="submit" value="ログイン画面へ" style="margin-left: 10px; padding: 5px 20px;">
+    </form>
 </div>
 {% endblock %}
