--- a/picture_book/templates/accounts/password_reset_done.html
+++ b/picture_book/templates/accounts/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="centered-container">
     <h1>お話の足跡</h1>
     <h2>＜パスワード再設定のご案内＞</h2>
     <p>以下のメールアドレスにパスワード再設定用のURLをお送りしました。</p>
