--- a/picture_book/templates/accounts/profile_update.html
+++ b/picture_book/templates/accounts/profile_update.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <h1>アカウント情報変更</h1>
     <form method="POST">
         {% csrf_token %}
