--- a/picture_book/templates/accounts/create_invitation.html
+++ b/picture_book/templates/accounts/create_invitation.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <h1>家族招待</h1>
     <form method="POST">
         {% csrf_token %}
