--- a/picture_book/templates/accounts/family_update.html
+++ b/picture_book/templates/accounts/family_update.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h1>家族編集・削除</h1>
     </div>
