--- a/picture_book/templates/accounts/password_reset_confirm.html
+++ b/picture_book/templates/accounts/password_reset_confirm.html
@@ -1,35 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-<h1>お話の足跡</h1>
-<p>パスワード再設定</p>
-{% comment %} エラーメッセージ {% endcomment %}
-{% if error_message %}
-    <div class="alert alert-danger">
-        <p>{{ error_message }}</p>
-    </div>
-{% endif %}
+<div class="container1">
+    <h1>お話の足跡</h1>
+    <h2>＜パスワード再設定＞</h2>
+    {% comment %} エラーメッセージ {% endcomment %}
+    {% if error_message %}
+        <div class="alert alert-danger">
+            <p>{{ error_message }}</p>
+        </div>
+    {% endif %}
 
-<form method="POST">
-    {% csrf_token %}
+    <form method="POST">
+        {% csrf_token %}
 
-    <div>
-        <label for="id_password1">パスワード：</label>
-        {{ form.password1 }}
-    </div>
+        <div>
+            <label for="id_password1">パスワード：</label>
+            {{ form.password1 }}
+        </div>
 
-    <div class="password-rules">
-        <ul>
-            {% for rule in password_rules %}
-                <li>{{ rule }}</li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div>
-        <label for="id_password2">パスワード(再入力)：</label>
-        {{ form.password2 }}
-    </div>
-    <button type="submit">登録</button>
-</form>
+        <div class="password-rules">
+            <ul>
+                {% for rule in password_rules %}
+                    <li>{{ rule }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            <label for="id_password2">パスワード(再入力)：</label>
+            {{ form.password2 }}
+        </div>
+        <input type="submit" value="登録" style="margin-left: 100px; padding: 5px 20px;">
+    </form>
 </div>
 {% endblock %}
