--- a/picture_book/templates/accounts/registration.html
+++ b/picture_book/templates/accounts/registration.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <h1>新規アカウント登録</h1>
     <form method="POST">
         {% csrf_token %}
@@ -21,7 +21,7 @@
             {% endif %}
         </p>
         {% endfor %}
-        <input type="submit" value="登録">
+        <input type="submit" value="登録" style="margin-left: 80px; padding: 10px 20px;">
     </form>
 </div>
 {% endblock %}
