--- a/picture_book/templates/accounts/request_password_reset.html
+++ b/picture_book/templates/accounts/request_password_reset.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container1">
     <h1>パスワードリセットエラー</h1>
     {% if exception_notes %}
     <p>エラー: {{ exception_notes }}</p>
