--- a/picture_book/templates/base.html
+++ b/picture_book/templates/base.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     <title>お話の足跡</title>
+    <style>
+        .navbar-nav .nav-item {
+            margin-right: 20px; /* 右側に余白を追加 */
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
